--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
     
 
         <ul>
-            <li class="right"><span>Anecdotes</span></li>
-            <li class="middle"><span>Interviews</span></li>
-            <li><span>Records</span></li>
-            <li class="middle"><span>Recent Stats</span></li>
+            <li class="right"><span>Video Game Producer</span></li>
+            <li class="middle"><span>Scrum Master</span></li>
+            <li><span>Video Game Publisher Producer</span></li>
+            <li class="middle"><span>Brand Identity Specialist</span></li>
             <li class="right"><span>Recent Snaps</span></li>
 
         </ul>
 
         <ul.leftLi>
-            <li class="rightRight"><span>Anecdotes</span></li>
-            <li class="middleRight"><span>Interviews</span></li>
-            <li class="middleMidlle"><span>Records</span></li>
-            <li class="middleRight"><span>Recent Stats</span></li>
-            <li class="rightRight"><span>Recent Snaps</span></li>
+            <li class="rightRight"><span>Master of List: Scrum Master  Tools: God  Excel, Jira, Trello, Mantis, Tom's  Planner</span></li>
+            <li class="middleRight"><span>Engine Software,Programming knowledge and languages, and dev tools: HTML5, CSS3, JavaScript, C#, Unity, Unreal, SVG, GitHub </span></li>
+            <li class="middleMidlle"><span>Blender,3Ds Max, Inkscape, GIMP, Davinci Resolve </span></li>
+            <li class="middleRight"><span>I like swimming, horchata and basketball. And I love my dog Mencia</span></li>
+            <li class="rightRight"><span>Friday should be part of  the weekend</span></li>
         </ul.leftLi>
 
     </div>
